# headhunter

./: .flake8  main.py  pyproject.toml
src/: FileWorker.py  Vacancy.py  connector.py
utils/: functions.py
