[tool.poetry]
name = "headhunter"
version = "0.1.0"
packages = [
    { include = "src" }
]
description = ""
authors = ["Prodeon <prodeon21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
